--- a/learn.html
+++ b/learn.html
@@ -1,218 +1,220 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn - Trang Học Tập</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --color-primary-bg: #84d9ba;
-            --color-dark-text: #1a1a1a;
-            --color-footer-bg: #f8f8f8;
-            --color-logo-bg: #ffffff;
-            --color-logo-border: #FFDAB9;
-            --color-action-button: #FFBFA9;
-            --color-action-button-hover: #FF9EBB;
-            --font-main: 'Inter', sans-serif;
-            --footer-height: 72px;
-        }
-        body, html {
-            margin: 0;
-            padding: 0;
-            font-family: var(--font-main);
-            color: var(--color-dark-text);
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-        }
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px 5%;
-            background-color: white;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-        }
-        .header__logo {
-            margin: 0;
-            display: flex;
-            align-items: center;
-            padding: 10px 15px;
-            background-color: var(--color-logo-bg);
-            border-radius: 9999px;
-            border: 1px solid var(--color-logo-border);
-            box-shadow: 0 0 10px rgba(255, 218, 185, 0.5);
-        }
-        .header__logo-image {
-            width: 32px;
-            height: 32px;
-            border-radius: 50%;
-            object-fit: cover;
-            background-color: #F08080; 
-            display: inline-block;
-        }
-        .header__logo-text {
-            margin-left: 10px;
-            font-weight: 600;
-            color: var(--color-dark-text);
-        }
-        .header__nav {
-            display: flex;
-            gap: 20px;
-        }      
-        .header__button {
-            background: none;
-            border: none;
-            padding: 10px 15px;
-            cursor: pointer;
-            font-size: 16px;
-            font-weight: 600;
-            transition: color 0.2s, background-color 0.2s, border-radius 0.2s;
-            border-radius: 8px;           
-            text-decoration: none;
-            display: inline-block;
-            color: var(--color-dark-text);
-        }
-        .header__button:hover {
-            color: white;
-            background-color: #8db5ad;
-            border-radius: 8px;
-        }
-        .main {
-            flex-grow: 1;
-            background-color: var(--color-primary-bg);
-            display: grid;
-            padding: 40px 5%;
-            grid-template-columns: 1fr 3fr; 
-            gap: 40px;
-        }
-        .main__sidebar {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-            padding-top: 50px;
-        }
-        .main__content {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-            overflow: hidden;
-        }        
-        .main__illustration-image {
-            width: 100%;
-            max-width: 600px;
-            height: auto;
-            border-radius: 16px;
-        }
-        .action-button {
-            background-color: var(--color-action-button);
-            color: white;
-            border: none;
-            padding: 15px 30px;
-            text-align: left;
-            font-size: 1.25rem;
-            font-weight: 600;
-            border-radius: 12px;
-            cursor: pointer;
-            transition: background-color 0.3s, transform 0.1s, box-shadow 0.3s;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-        .action-button:hover {
-            background-color: var(--color-action-button-hover);
-            transform: translateY(-2px);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-        }
-        .footer {
-            height: var(--footer-height);
-            background-color: var(--color-footer-bg);
-            color: var(--color-dark-text);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 14px;
-            padding: 0 5%;
-            box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.05);
-        }
-        .footer__contact-info {
-            display: flex;
-            gap: 30px;
-        }
-        @media (max-width: 1024px) {
-            .main {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-            .main__sidebar {
-                width: 100%;
-                max-width: 400px;
-            }
-            .main__content {
-                width: 100%;
-                max-width: 600px;
-                min-height: 300px;
-            }
-            .action-button {
-                width: 100%;
-                text-align: center;
-            }
-        }
-        @media (max-width: 768px) {
-            .header {
-                flex-direction: column;
-                padding: 15px 5%;
-            }
-            .header__nav {
-                margin-top: 15px;
-                flex-direction: column;
-                gap: 10px;
-                width: 100%;
-                align-items: center;
-            }
-            .header__button {
-                width: 100%;
-                text-align: center;
-            }
-            .footer__contact-info {
-                flex-direction: column;
-                gap: 5px;
-                text-align: center;
-            }
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Learn - Trang Học Tập</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --color-primary-bg: #84d9ba;
+            --color-dark-text: #1a1a1a;
+            --color-footer-bg: #f8f8f8;
+            --color-logo-bg: #ffffff;
+            --color-logo-border: #FFDAB9;
+            --color-action-button: #FFBFA9;
+            --color-action-button-hover: #FF9EBB;
+            --font-main: 'Inter', sans-serif;
+            --footer-height: 104px;
+        }
+        body, html {
+            margin: 0;
+            padding: 0;
+            font-family: var(--font-main);
+            color: var(--color-dark-text);
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 5%;
+            background-color: white;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+        }
+        .header__logo {
+            margin: 0;
+            display: flex;
+            align-items: center;
+            padding: 10px 15px;
+            background-color: var(--color-logo-bg);
+            border-radius: 9999px;
+            border: 1px solid var(--color-logo-border);
+            box-shadow: 0 0 10px rgba(255, 218, 185, 0.5);
+        }
+        .header__logo-image {
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            object-fit: cover;
+            background-color: #F08080; 
+            display: inline-block;
+        }
+        .header__logo-text {
+            margin-left: 10px;
+            font-weight: 600;
+            color: var(--color-dark-text);
+        }
+        .header__nav {
+            display: flex;
+            gap: 20px;
+        }       
+        .header__button {
+            background: none;
+            border: none;
+            padding: 10px 15px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: 600;
+            color: var(--color-dark-text);
+            transition: color 0.2s, background-color 0.2s, border-radius 0.2s;
+            border-radius: 8px;
+            text-decoration: none;
+            display: inline-block;
+        }
+        .header__button:hover {
+            color: white;
+            background-color: #8db5ad;
+            border-radius: 8px;
+        }
+        .main {
+            flex-grow: 1;
+            background-color: var(--color-primary-bg);
+            display: grid;
+            padding: 40px 5%;
+            grid-template-columns: 1fr 3fr; 
+            gap: 40px;
+        }
+        .main__sidebar {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            padding-top: 50px;
+        }
+        .main__content {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            overflow: hidden;
+        }        
+        .main__illustration-image {
+            width: 100%;
+            max-width: 120px;
+            height: auto;
+            border-radius: 16px;
+        }
+        .action-button {
+            background-color: var(--color-action-button);
+            color: white;
+            border: none;
+            padding: 15px 30px;
+            text-align: left;
+            font-size: 1.25rem;
+            font-weight: 600;
+            border-radius: 12px;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.1s, box-shadow 0.3s;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            text-decoration: none;
+            display: block;
+        }
+        .action-button:hover {
+            background-color: var(--color-action-button-hover);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+        }
+        .footer {
+            height: var(--footer-height);
+            background-color: var(--color-footer-bg);
+            color: var(--color-dark-text);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 14px;
+            padding: 0 5%;
+            box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.05);
+        }
+        .footer__contact-info {
+            display: flex;
+            gap: 30px;
+        }
+        @media (max-width: 1024px) {
+            .main {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+            .main__sidebar {
+                width: 100%;
+                max-width: 400px;
+            }
+            .main__content {
+                width: 100%;
+                max-width: 600px;
+                min-height: 300px;
+            }
+            .action-button {
+                width: 100%;
+                text-align: center;
+            }
+        }
+        @media (max-width: 768px) {
+            .header {
+                flex-direction: column;
+                padding: 15px 5%;
+            }
+            .header__nav {
+                margin-top: 15px;
+                flex-direction: column;
+                gap: 10px;
+                width: 100%;
+                align-items: center;
+            }
+            .header__button {
+                width: 100%;
+                text-align: center;
+            }
+            .footer__contact-info {
+                flex-direction: column;
+                gap: 5px;
+                text-align: center;
+            }
+        }
+    </style>
 </head>
 <body>
-    <header class="header">
-        <figure class="header__logo">
-            <img src="https://placehold.co/32x32/FFDAB9/FFDAB9?text=L" alt="Logo Trang Học Tập" class="header__logo-image">
-            <figcaption class="header__logo-text">Logo</figcaption>
-        </figure>
-        <nav class="header__nav">
-                        <a href="index.html" class="header__button">Home</a>            
-            <button class="header__button">Learn</button> 
-            <button class="header__button">Communication</button>
-            <button class="header__button">Personal Information</button>
-        </nav>
-    </header>
-    <main class="main">    
-        <aside class="main__sidebar">
-            <button class="action-button">Mission</button>
-            <button class="action-button">Pomodoro</button>
-            <button class="action-button">Challenge</button>
-            <button class="action-button">Memo</button>
-        </aside>
+    <header class="header">
+        <figure class="header__logo">
+            <img src="https://placehold.co/32x32/FFDAB9/FFDAB9?text=L" alt="Logo Trang Học Tập" class="header__logo-image">
+            <figcaption class="header__logo-text">Logo</figcaption>
+        </figure>
+        <nav class="header__nav">
+            <a href="index.html" class="header__button">Home</a>
+            <a href="#" class="header__button">Learn</a> 
+            <a href="#" class="header__button">Communication</a>
+            <a href="#" class="header__button">Personal Information</a>
+        </nav>
+    </header>
+    <main class="main">      
+        <aside class="main__sidebar">
+            <a href="mission.html" class="action-button">Mission</a>
+            <a href="#" class="action-button">Pomodoro</a>
+            <a href="#" class="action-button">Challenge</a>
+            <a href="#" class="action-button">Memo</a>
+        </aside>
 
-        <section class="main__content">
-                        <img src="2848307_413144-PDTI0W-765.svg" alt="Hình minh họa các công cụ học tập" class="main__illustration-image">
-        </section>
-    </main>
-    <footer class="footer">
-        <div class="footer__contact-info">
-            <span>Email: giangnguyen@studysite.com</span>
-            <span>Số điện thoại: 0363 637 899</span>
-        </div>
-    </footer>
+        <section class="main__content">
+            <img src="2848307_413144-PDTI0W-765.svg" alt="Hình minh họa các công cụ học tập" class="main__illustration-image">
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="footer__contact-info">
+            <span>Email: giangnguyen@studysite.com</span>
+            <span>Số điện thoại: 0363 637 899</span>
+        </div>
+    </footer>
 </body>
 </html>
