--- a/learn.html
+++ b/learn.html
@@ -193,7 +193,7 @@
         </figure>
         <nav class="header__nav">
             <a href="index.html" class="header__button">Home</a>
-            <a href="#" class="header__button">Learn</a> 
+            <a href="learn.html" class="header__button">Learn</a> 
             <a href="#" class="header__button">Communication</a>
             <a href="#" class="header__button">Personal Information</a>
         </nav>
@@ -218,3 +218,4 @@
     </footer>
 </body>
 </html>
+
