--- a/learn.html
+++ b/learn.html
@@ -208,7 +208,7 @@
         </aside>
 
         <section class="main__content">
-            <img src="https://placehold.co/450x300/84d9ba/1a1a1a?text=Learning+Tools" alt="Hình minh họa các công cụ học tập" class="main__illustration-image">
+            <img src="2848307_413144-PDTI0W-765.svg" alt="Hình minh họa các công cụ học tập" class="main__illustration-image">
         </section>
     </main>
     <footer class="footer">
@@ -219,3 +219,4 @@
     </footer>
 </body>
 </html>
+
